# genesys

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: gpu.yml  push-docker-image.yml  test_config.yml
configs/: debug.toml  deepseek_r1 _continue_generation.toml  deepseek_r1.toml  deepseek_r1_continued_generation.toml  llama70b.toml  r1.toml
script/: entrypoint.sh  install.sh
src/genesys/: auto_detect_model_config.py  data.py  generate.py  prime_metrics.py  schemas.py  utils.py  verify.py
src/genesys/toploc/: __init__.py  ndd.py  poly.py
src/genesys/verifier/: code_output_prediction_verifier.py  code_test_verifier.py  llm_judge_verifier.py  math_verifier.py  verifier.py
src/genesys/verifiers/: base_verifier.py  code_output_prediction_verifier.py  code_test_verifier.py  kernelbench.py  llm_judge_verifier.py  math_verifier.py  registry.py
src/intellect/: generate.py  utils.py
tests/: test_configs.py  test_run.py  test_version.py
tests/toploc/: test_poly.py
