[project]
name = "genesys"
version = "0.1.0"
description = "AGI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.1",
    "datasets>=3.0.0",
    "transformers>=4.44.2",
    "rich",
    "antlr4-python3-runtime==4.11",
    "pydantic_config @ git+https://github.com/samsja/pydantic_config.git@74c94ee",
    "google-cloud-storage",
    "tomli",
    "docker>=7.1.0",
    "pynvml>=12.0.0"
]

[project.optional-dependencies]


sglang = [
    "sglang[srt]>=0.4.1",
    "sympy",
    "uvloop",
    "psutil",
    "zmq",
    "setuptools",
    "fastapi",
    "uvicorn",
    "vllm",
    "flashinfer",
]

[tool.hatch.metadata]
allow-direct-references = true # allow direct references to git repos in dependencies


[tool.uv.sources]
flashinfer = [
  { index = "flash-infer"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0", "faker>=0"]

[[tool.uv.index]]
name = "flash-infer"
url = "https://flashinfer.ai/whl/cu124/torch2.4"
explicit = true